--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8080:8080"
     depends_on:
       - mydatabase
+    restart: always
     networks:
       - proxynet
 
@@ -26,13 +27,20 @@ services:
       - MYSQL_ROOT_PASSWORD=201196
       - MYSQL_USER=root
       - MYSQL_PASSWORD=201196
-    # healthcheck:
-    #   test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
-    #   interval: 2s
-    #   timeout: 20s
-    #   retries: 10
+    healthcheck:
+       test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
+       interval: 2s
+       timeout: 20s
+       retries: 10
+    volumes:
+      - data:/var/lib/mysql
       
 
 networks:
   proxynet:
     name: custom_network
+
+
+volumes:
+  data:
+    external: false
