--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 		</init-param>
 		<init-param>
 			<param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-			<param-value>com.service.CORSFilter</param-value>
+			<param-value>com.pepe.service.CORSFilter</param-value>
 		</init-param>
 
 		<load-on-startup>1</load-on-startup>
